worked on FeeSave

--- a/CRM/Views/Admission/NewAdmission.cshtml
+++ b/CRM/Views/Admission/NewAdmission.cshtml
@@ -155,37 +155,37 @@
                                         <div class="col-md-2">
                                             <div class="form-group">
                                                 <label>New Student Fee</label>
-                                                <input id="txtNewStudentFee" asp-for="Scholership" type="number" class="form-control">
+                                                <input id="txtNewStudentFee" asp-for="NewStudentFee" type="number" class="form-control">
                                             </div>
                                         </div>
                                         <div class="col-md-3">
                                             <div class="form-group">
                                                 <label>CMondy</label>
-                                                <input id="txtCMondy" asp-for="DisBy" class="form-control">
+                                                <input id="txtCMondy" asp-for="CMoney" type="number" class="form-control">
                                             </div>
                                         </div>
                                         <div class="col-md-2">
                                             <div class="form-group">
                                                 <label>Tution Fee</label>
-                                                <input id="txtTutionFee" asp-for="DisResion" class="form-control">
+                                                <input id="txtTutionFee" asp-for="TutionFee" type="number" class="form-control">
                                             </div>
                                         </div>
                                         <div class="col-md-2">
                                             <div class="form-group">
                                                 <label>Other Fee</label>
-                                                <input id="txtOtherFee" asp-for="DisResion" class="form-control">
+                                                <input id="txtOtherFee" asp-for="OtherFee" type="number" class="form-control">
                                             </div>
                                         </div>
                                         <div class="col-md-2">
                                             <div class="form-group">
                                                 <label>Total Fee</label>
-                                                <input id="txtTotalFee" asp-for="DisResion" class="form-control">
+                                                <input id="txtTotalFee" asp-for="TotalFee" type="number" class="form-control">
                                             </div>
                                         </div>
                                         <div class="col-md-2">
                                             <div class="form-group">
                                                 <label>Total Fee MC</label>
-                                                <input id="txtTotalFeeMC" asp-for="DisResion" class="form-control">
+                                                <input id="txtTotalFeeMC" asp-for="TotalFeeCM" type="number" class="form-control">
                                             </div>
                                         </div>
 
