worked on payment

--- a/CRM/Views/Payment/Index.cshtml
+++ b/CRM/Views/Payment/Index.cshtml
@@ -278,8 +278,9 @@
                     $('#spnAcademicDetail').text(varAcademyDetail)
                     debugger;
                     //------------------Fee Detail-------
-                    var Feedetail = res.data.feeDetail;
-                    $('#spnTotalFee').text(Feedetail.totalFee);
+                    //var Feedetail = res.data.studentFeeDetail;
+                    //$('#spnTotalFee').text(Feedetail.totalFee);
+
                     $("#modal-Promod").modal("show");
 
                 }
